<resources>
    <string name="app_name">MovieToWatch</string>
    <string name="my_watch_list">My WatchList</string>
    <string name="my_favorit">My Favorites</string>
    <string name="refresh">Refresh</string>
    <string name="most_popular">Most Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="latest">Latest Movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="trailer">Trailer</string>
    <string name="favorite" translatable="false">Favorite Movies</string>
    <string name="crew">Crew</string>
    <string name="cast">Cast</string>
    <string name="cast_crew">Cast n Crew</string>

</resources>
