<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chandan.android.movietowatch.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/activity_detail">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:padding="@dimen/padding_layout"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1" />

                <TextView
                    android:id="@+id/userrating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:layout_marginStart="16dp"
                    android:padding="@dimen/padding_layout"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:layout_constraintTop_creator="1" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userrating"
                    tools:layout_constraintTop_creator="1" />

                <TextView
                    android:id="@+id/releasedate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:padding="@dimen/padding_layout"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/plotsynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    android:padding="@dimen/padding_layout"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/releasedate" />

                <TextView
                    android:id="@+id/thumbnailUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plotsynopsis" />

                <LinearLayout
                    android:id="@+id/ll_cast_crew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plotsynopsis">


                    <View
                        android:id="@+id/view_cast"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/background" />


                    <ImageView
                        android:id="@+id/imageView_arrow_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/view_cast"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:src="@drawable/round_arrow_right"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView_cast_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_arrow_cast"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@+id/imageView_arrow_cast"
                        android:layout_toRightOf="@+id/imageView_arrow_cast"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/cast"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_cast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        app:reverseLayout="true"


                        />


                    <!--<View
                        android:id="@+id/view_crew"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/horizontalScrollView_cast"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/background" />-->
                    <View
                        android:id="@+id/view_crew"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/background" />


                    <ImageView
                        android:id="@+id/imageView_arrow_crew"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/view_crew"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:src="@drawable/round_arrow_right"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView_crew_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/imageView_arrow_cast"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@+id/imageView_arrow_crew"
                        android:layout_toRightOf="@+id/imageView_arrow_crew"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/crew"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_crew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        app:reverseLayout="true"


                        />

                    <!--
                                        <View
                                            android:id="@+id/view_end"
                                            android:layout_width="match_parent"
                                            android:layout_height="2dp"
                                            android:layout_below="@id/horizontalScrollView_crew"
                                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                                            android:background="@drawable/background" />-->

                </LinearLayout>


                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/favorite_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/userrating"
                    app:layout_constraintLeft_toRightOf="@+id/releasedate"
                    app:layout_constraintRight_toLeftOf="@+id/userrating"
                    app:layout_constraintTop_toBottomOf="@+id/userrating" />


                <TextView
                    android:id="@+id/trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_cast_crew" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:scrollbars="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trailer" />


            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>